fix(ui): make authentication icons visible in dark mode (#15744)
* fix(ui): make authentication icons visible in dark mode

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

* fix after merge

---------

--- a/weblate/static/style-dark.css
+++ b/weblate/static/style-dark.css
@@ -2943,6 +2943,11 @@ tbody.warning {
   border: 1px solid #dabc87 !important;
 }
 
+.auth-image {
+  filter: invert(90%) sepia(19%) saturate(258%) hue-rotate(316deg)
+    brightness(108%) contrast(102%);
+}
+
 .navbar-form .form-control {
   color: #d9d3cc;
 }
